@@ -1,9 +1,10 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License
- * 2.0 and the Server Side Public License, v 1; you may not use this file except
- * in compliance with, at your election, the Elastic License 2.0 or the Server
- * Side Public License, v 1.
+ * or more contributor license agreements. Licensed under the "Elastic License
+ * 2.0", the "GNU Affero General Public License v3.0 only", and the "Server Side
+ * Public License v 1"; you may not use this file except in compliance with, at
+ * your election, the "Elastic License 2.0", the "GNU Affero General Public
+ * License v3.0 only", or the "Server Side Public License, v 1".
  */
 
 package org.elasticsearch.ingest;
@@ -12,8 +13,6 @@ import org.elasticsearch.ElasticsearchException;
 import org.elasticsearch.test.ESTestCase;
 import org.junit.Before;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.TimeUnit;
@@ -21,7 +20,7 @@ import java.util.function.BiConsumer;
 import java.util.function.Consumer;
 import java.util.function.LongSupplier;
 
-import static org.hamcrest.CoreMatchers.equalTo;
+import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.hasSize;
 import static org.hamcrest.Matchers.is;
 import static org.hamcrest.Matchers.notNullValue;
@@ -51,12 +50,18 @@ public class CompoundProcessorTests extends ESTestCase {
     }
 
     public void testSingleProcessor() throws Exception {
+        boolean isAsync = randomBoolean();
         LongSupplier relativeTimeProvider = mock(LongSupplier.class);
         when(relativeTimeProvider.getAsLong()).thenReturn(0L, TimeUnit.MILLISECONDS.toNanos(1));
-        TestProcessor processor = new TestProcessor(
-            ingestDocument -> { assertStats(0, ingestDocument.getFieldValue("compoundProcessor", CompoundProcessor.class), 1, 0, 0, 0); }
-        );
-        CompoundProcessor compoundProcessor = new CompoundProcessor(relativeTimeProvider, false, processor);
+        TestProcessor processor = new TestProcessor(ingestDocument -> {
+            assertStats(0, ingestDocument.getFieldValue("compoundProcessor", CompoundProcessor.class), 1, 0, 0, 0);
+        }) {
+            @Override
+            public boolean isAsync() {
+                return isAsync;
+            }
+        };
+        CompoundProcessor compoundProcessor = new CompoundProcessor(false, List.of(processor), List.of(), relativeTimeProvider);
         ingestDocument.setFieldValue("compoundProcessor", compoundProcessor); // ugly hack to assert current count = 1
         assertThat(compoundProcessor.getProcessors().size(), equalTo(1));
         assertThat(compoundProcessor.getProcessors().get(0), sameInstance(processor));
@@ -66,14 +71,13 @@ public class CompoundProcessorTests extends ESTestCase {
         verify(relativeTimeProvider, times(2)).getAsLong();
         assertThat(processor.getInvokedCounter(), equalTo(1));
         assertStats(compoundProcessor, 1, 0, 1);
-
     }
 
     public void testSingleProcessorWithException() throws Exception {
         TestProcessor processor = new TestProcessor(new RuntimeException("error"));
         LongSupplier relativeTimeProvider = mock(LongSupplier.class);
         when(relativeTimeProvider.getAsLong()).thenReturn(0L);
-        CompoundProcessor compoundProcessor = new CompoundProcessor(relativeTimeProvider, false, processor);
+        CompoundProcessor compoundProcessor = new CompoundProcessor(false, List.of(processor), List.of(), relativeTimeProvider);
         assertThat(compoundProcessor.getProcessors().size(), equalTo(1));
         assertThat(compoundProcessor.getProcessors().get(0), sameInstance(processor));
         assertThat(compoundProcessor.getOnFailureProcessors().isEmpty(), is(true));
@@ -82,18 +86,18 @@ public class CompoundProcessorTests extends ESTestCase {
         assertThat(((ElasticsearchException) holder[0]).getRootCause().getMessage(), equalTo("error"));
         assertThat(processor.getInvokedCounter(), equalTo(1));
         assertStats(compoundProcessor, 1, 1, 0);
-
     }
 
     public void testIgnoreFailure() throws Exception {
-        TestProcessor processor1 = new TestProcessor(new RuntimeException("error"));
+        TestProcessor processor1 = getTestProcessor(null, randomBoolean(), true);
         TestProcessor processor2 = new TestProcessor(ingestDocument -> { ingestDocument.setFieldValue("field", "value"); });
+        TestProcessor processor3 = new TestProcessor(ingestDocument -> fail("ignoreFailure is true, processor shouldn't be called"));
         LongSupplier relativeTimeProvider = mock(LongSupplier.class);
         when(relativeTimeProvider.getAsLong()).thenReturn(0L);
         CompoundProcessor compoundProcessor = new CompoundProcessor(
             true,
-            Arrays.asList(processor1, processor2),
-            Collections.emptyList(),
+            List.of(processor1, processor2),
+            List.of(processor3), // when ignoreFailure is true, onFailureProcessors are not called (regardless of whether a failure occurs)
             relativeTimeProvider
         );
         executeCompound(compoundProcessor, ingestDocument, (result, e) -> {});
@@ -116,12 +120,7 @@ public class CompoundProcessorTests extends ESTestCase {
 
         LongSupplier relativeTimeProvider = mock(LongSupplier.class);
         when(relativeTimeProvider.getAsLong()).thenReturn(0L, TimeUnit.MILLISECONDS.toNanos(1));
-        CompoundProcessor compoundProcessor = new CompoundProcessor(
-            false,
-            Collections.singletonList(processor1),
-            Collections.singletonList(processor2),
-            relativeTimeProvider
-        );
+        CompoundProcessor compoundProcessor = new CompoundProcessor(false, List.of(processor1), List.of(processor2), relativeTimeProvider);
         executeCompound(compoundProcessor, ingestDocument, (result, e) -> {});
         verify(relativeTimeProvider, times(2)).getAsLong();
 
@@ -157,12 +156,7 @@ public class CompoundProcessorTests extends ESTestCase {
 
         LongSupplier relativeTimeProvider = mock(LongSupplier.class);
         when(relativeTimeProvider.getAsLong()).thenReturn(0L);
-        CompoundProcessor compoundProcessor = new CompoundProcessor(
-            false,
-            Collections.singletonList(processor1),
-            Collections.singletonList(processor2),
-            relativeTimeProvider
-        );
+        CompoundProcessor compoundProcessor = new CompoundProcessor(false, List.of(processor1), List.of(processor2), relativeTimeProvider);
         IngestDocument[] result = new IngestDocument[1];
         executeCompound(compoundProcessor, ingestDocument, (r, e) -> result[0] = r);
         assertThat(result[0], nullValue());
@@ -191,14 +185,14 @@ public class CompoundProcessorTests extends ESTestCase {
         when(relativeTimeProvider.getAsLong()).thenReturn(0L);
         CompoundProcessor compoundOnFailProcessor = new CompoundProcessor(
             false,
-            Collections.singletonList(processorToFail),
-            Collections.singletonList(lastProcessor),
+            List.of(processorToFail),
+            List.of(lastProcessor),
             relativeTimeProvider
         );
         CompoundProcessor compoundProcessor = new CompoundProcessor(
             false,
-            Collections.singletonList(processor),
-            Collections.singletonList(compoundOnFailProcessor),
+            List.of(processor),
+            List.of(compoundOnFailProcessor),
             relativeTimeProvider
         );
         executeCompound(compoundProcessor, ingestDocument, (result, e) -> {});
@@ -212,25 +206,19 @@ public class CompoundProcessorTests extends ESTestCase {
         LongSupplier relativeTimeProvider = mock(LongSupplier.class);
         when(relativeTimeProvider.getAsLong()).thenReturn(0L);
         TestProcessor firstFailingProcessor = new TestProcessor("id1", "first", null, new RuntimeException("first failure"));
-        TestProcessor onFailure1 = new TestProcessor(
-            "id2",
-            "second",
-            null,
-            ingestDocument -> { ingestDocument.setFieldValue("foofield", "exists"); }
-        );
+        TestProcessor onFailure1 = new TestProcessor("id2", "second", null, ingestDocument -> {
+            ingestDocument.setFieldValue("foofield", "exists");
+        });
         TestProcessor onFailure2 = new TestProcessor("id3", "third", null, new RuntimeException("onfailure2"));
-        TestProcessor onFailure2onFailure = new TestProcessor(
-            "id4",
-            "4th",
-            null,
-            ingestDocument -> { ingestDocument.setFieldValue("foofield2", "ran"); }
-        );
+        TestProcessor onFailure2onFailure = new TestProcessor("id4", "4th", null, ingestDocument -> {
+            ingestDocument.setFieldValue("foofield2", "ran");
+        });
         CompoundProcessor of2 = new CompoundProcessor(false, List.of(onFailure2), List.of(onFailure2onFailure), relativeTimeProvider);
         CompoundProcessor compoundOnFailProcessor = new CompoundProcessor(false, List.of(onFailure1, of2), List.of(), relativeTimeProvider);
         CompoundProcessor compoundProcessor = new CompoundProcessor(
             false,
-            Collections.singletonList(firstFailingProcessor),
-            Collections.singletonList(compoundOnFailProcessor),
+            List.of(firstFailingProcessor),
+            List.of(compoundOnFailProcessor),
             relativeTimeProvider
         );
         IngestDocument[] docHolder = new IngestDocument[1];
@@ -262,12 +250,12 @@ public class CompoundProcessorTests extends ESTestCase {
         LongSupplier relativeTimeProvider = mock(LongSupplier.class);
         when(relativeTimeProvider.getAsLong()).thenReturn(0L);
 
-        CompoundProcessor failCompoundProcessor = new CompoundProcessor(relativeTimeProvider, false, firstProcessor);
+        CompoundProcessor failCompoundProcessor = new CompoundProcessor(false, List.of(firstProcessor), List.of(), relativeTimeProvider);
 
         CompoundProcessor compoundProcessor = new CompoundProcessor(
             false,
-            Collections.singletonList(failCompoundProcessor),
-            Collections.singletonList(secondProcessor),
+            List.of(failCompoundProcessor),
+            List.of(secondProcessor),
             relativeTimeProvider
         );
         executeCompound(compoundProcessor, ingestDocument, (result, e) -> {});
@@ -292,15 +280,15 @@ public class CompoundProcessorTests extends ESTestCase {
         when(relativeTimeProvider.getAsLong()).thenReturn(0L);
         CompoundProcessor failCompoundProcessor = new CompoundProcessor(
             false,
-            Collections.singletonList(firstProcessor),
-            Collections.singletonList(failProcessor),
+            List.of(firstProcessor),
+            List.of(failProcessor),
             relativeTimeProvider
         );
 
         CompoundProcessor compoundProcessor = new CompoundProcessor(
             false,
-            Collections.singletonList(failCompoundProcessor),
-            Collections.singletonList(secondProcessor),
+            List.of(failCompoundProcessor),
+            List.of(secondProcessor),
             relativeTimeProvider
         );
         executeCompound(compoundProcessor, ingestDocument, (result, e) -> {});
@@ -325,14 +313,14 @@ public class CompoundProcessorTests extends ESTestCase {
         when(relativeTimeProvider.getAsLong()).thenReturn(0L);
         CompoundProcessor failCompoundProcessor = new CompoundProcessor(
             false,
-            Collections.singletonList(firstProcessor),
-            Collections.singletonList(new CompoundProcessor(relativeTimeProvider, false, failProcessor))
+            List.of(firstProcessor),
+            List.of(new CompoundProcessor(false, List.of(failProcessor), List.of(), relativeTimeProvider))
         );
 
         CompoundProcessor compoundProcessor = new CompoundProcessor(
             false,
-            Collections.singletonList(failCompoundProcessor),
-            Collections.singletonList(secondProcessor),
+            List.of(failCompoundProcessor),
+            List.of(secondProcessor),
             relativeTimeProvider
         );
         executeCompound(compoundProcessor, ingestDocument, (result, e) -> {});
@@ -350,8 +338,8 @@ public class CompoundProcessorTests extends ESTestCase {
         when(relativeTimeProvider.getAsLong()).thenReturn(0L);
         CompoundProcessor pipeline = new CompoundProcessor(
             false,
-            Arrays.asList(firstProcessor, secondProcessor),
-            Collections.singletonList(onFailureProcessor),
+            List.of(firstProcessor, secondProcessor),
+            List.of(onFailureProcessor),
             relativeTimeProvider
         );
         executeCompound(pipeline, ingestDocument, (result, e) -> {});
@@ -398,11 +386,6 @@ public class CompoundProcessorTests extends ESTestCase {
                     throw error[0];
                 }
                 return result[0];
-            }
-
-            @Override
-            public boolean isAsync() {
-                return false;
             }
 
             @Override
@@ -471,10 +454,6 @@ public class CompoundProcessorTests extends ESTestCase {
                 return "my_type2";
             }
 
-            @Override
-            public boolean isAsync() {
-                return false;
-            }
         }));
 
         Exception[] holder = new Exception[1];
@@ -493,12 +472,10 @@ public class CompoundProcessorTests extends ESTestCase {
         for (int i = 0; i < processorsCount; i++) {
             processors[i] = getTestProcessor(Integer.toString(i), randomBoolean(), randomBoolean());
         }
-        CompoundProcessor compoundProcessor = new CompoundProcessor(relativeTimeProvider, true, processors);
-        executeCompound(
-            compoundProcessor,
-            ingestDocument,
-            (result, e) -> { if (e != null) fail("CompoundProcessor threw exception despite ignoreFailure being true"); }
-        );
+        CompoundProcessor compoundProcessor = new CompoundProcessor(true, List.of(processors), List.of(), relativeTimeProvider);
+        executeCompound(compoundProcessor, ingestDocument, (result, e) -> {
+            if (e != null) fail("CompoundProcessor threw exception despite ignoreFailure being true");
+        });
         for (int i = 0; i < processors.length; i++) {
             assertThat(
                 "Processor " + i + " ran " + processors[i].getInvokedCounter() + " times",
@@ -521,7 +498,7 @@ public class CompoundProcessorTests extends ESTestCase {
         for (int i = goodProcessorsCount + 1; i < totalProcessorsCount; i++) {
             processors[i] = getTestProcessor(Integer.toString(i), randomBoolean(), false);
         }
-        CompoundProcessor compoundProcessor = new CompoundProcessor(relativeTimeProvider, false, processors);
+        CompoundProcessor compoundProcessor = new CompoundProcessor(false, List.of(processors), List.of(), relativeTimeProvider);
         executeCompound(compoundProcessor, ingestDocument, (result, e) -> {});
         for (int i = 0; i < goodProcessorsCount + 1; i++) {
             assertThat(
@@ -539,13 +516,89 @@ public class CompoundProcessorTests extends ESTestCase {
         }
     }
 
+    public void testSkipPipeline() {
+        TestProcessor processor1 = new TestProcessor(doc -> doc.reroute("foo"));
+        TestProcessor processor2 = new TestProcessor(new RuntimeException("this processor was expected to be skipped"));
+        LongSupplier relativeTimeProvider = mock(LongSupplier.class);
+        when(relativeTimeProvider.getAsLong()).thenReturn(0L);
+        CompoundProcessor compoundProcessor = new CompoundProcessor(
+            false,
+            List.of(processor1, processor2),
+            List.of(),
+            relativeTimeProvider
+        );
+        executeCompound(compoundProcessor, ingestDocument, (result, e) -> {});
+        assertThat(processor1.getInvokedCounter(), equalTo(1));
+        assertStats(0, compoundProcessor, 0, 1, 0, 0);
+        assertThat(processor2.getInvokedCounter(), equalTo(0));
+        assertStats(1, compoundProcessor, 0, 0, 0, 0);
+    }
+
+    public void testSkipAsyncProcessor() {
+        TestProcessor processor1 = new TestProcessor(doc -> doc.reroute("foo")) {
+            @Override
+            public boolean isAsync() {
+                return true;
+            }
+        };
+        TestProcessor processor2 = new TestProcessor(new RuntimeException("this processor was expected to be skipped"));
+        LongSupplier relativeTimeProvider = mock(LongSupplier.class);
+        when(relativeTimeProvider.getAsLong()).thenReturn(0L);
+        CompoundProcessor compoundProcessor = new CompoundProcessor(
+            false,
+            List.of(processor1, processor2),
+            List.of(),
+            relativeTimeProvider
+        );
+        executeCompound(compoundProcessor, ingestDocument, (result, e) -> {});
+        assertThat(processor1.getInvokedCounter(), equalTo(1));
+        assertStats(0, compoundProcessor, 0, 1, 0, 0);
+        assertThat(processor2.getInvokedCounter(), equalTo(0));
+        assertStats(1, compoundProcessor, 0, 0, 0, 0);
+    }
+
+    public void testSkipProcessorIgnoreFailure() {
+        TestProcessor processor1 = new TestProcessor(doc -> {
+            doc.reroute("foo");
+            throw new RuntimeException("simulate processor failure after calling skipCurrentPipeline()");
+        });
+        TestProcessor processor2 = new TestProcessor(doc -> {});
+        LongSupplier relativeTimeProvider = mock(LongSupplier.class);
+        when(relativeTimeProvider.getAsLong()).thenReturn(0L);
+        CompoundProcessor compoundProcessor = new CompoundProcessor(true, List.of(processor1, processor2), List.of(), relativeTimeProvider);
+        executeCompound(compoundProcessor, ingestDocument, (result, e) -> {});
+        assertThat(processor1.getInvokedCounter(), equalTo(1));
+        assertStats(0, compoundProcessor, 0, 1, 1, 0);
+        assertThat(processor2.getInvokedCounter(), equalTo(0));
+        assertStats(1, compoundProcessor, 0, 0, 0, 0);
+    }
+
+    public void testDontSkipFailureProcessor() {
+        TestProcessor processor = new TestProcessor(doc -> {
+            doc.reroute("foo");
+            throw new RuntimeException("simulate processor failure after calling skipCurrentPipeline()");
+        });
+        TestProcessor failureProcessor1 = new TestProcessor(doc -> {});
+        TestProcessor failureProcessor2 = new TestProcessor(doc -> {});
+        LongSupplier relativeTimeProvider = mock(LongSupplier.class);
+        when(relativeTimeProvider.getAsLong()).thenReturn(0L);
+        CompoundProcessor compoundProcessor = new CompoundProcessor(
+            false,
+            List.of(processor),
+            List.of(failureProcessor1, failureProcessor2),
+            relativeTimeProvider
+        );
+        executeCompound(compoundProcessor, ingestDocument, (result, e) -> {});
+        assertThat(processor.getInvokedCounter(), equalTo(1));
+        assertStats(0, compoundProcessor, 0, 1, 1, 0);
+        assertThat(failureProcessor1.getInvokedCounter(), equalTo(1));
+        assertThat(failureProcessor2.getInvokedCounter(), equalTo(1));
+    }
+
     private TestProcessor getTestProcessor(String tag, boolean isAsync, boolean shouldThrowException) {
-        return new TestProcessor(
-            tag,
-            "test-processor",
-            null,
-            ingestDocument -> { if (shouldThrowException) throw new RuntimeException("Intentionally failing"); }
-        ) {
+        return new TestProcessor(tag, "test-processor", null, ingestDocument -> {
+            if (shouldThrowException) throw new RuntimeException("Intentionally failing");
+        }) {
             @Override
             public boolean isAsync() {
                 return isAsync;
@@ -573,9 +626,9 @@ public class CompoundProcessorTests extends ESTestCase {
 
     private void assertStats(int processor, CompoundProcessor compoundProcessor, long current, long count, long failed, long time) {
         IngestStats.Stats stats = compoundProcessor.getProcessorsWithMetrics().get(processor).v2().createStats();
-        assertThat(stats.getIngestCount(), equalTo(count));
-        assertThat(stats.getIngestCurrent(), equalTo(current));
-        assertThat(stats.getIngestFailedCount(), equalTo(failed));
-        assertThat(stats.getIngestTimeInMillis(), equalTo(time));
+        assertThat(stats.ingestCount(), equalTo(count));
+        assertThat(stats.ingestCurrent(), equalTo(current));
+        assertThat(stats.ingestFailedCount(), equalTo(failed));
+        assertThat(stats.ingestTimeInMillis(), equalTo(time));
     }
 }
