@@ -1,29 +1,34 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License
- * 2.0 and the Server Side Public License, v 1; you may not use this file except
- * in compliance with, at your election, the Elastic License 2.0 or the Server
- * Side Public License, v 1.
+ * or more contributor license agreements. Licensed under the "Elastic License
+ * 2.0", the "GNU Affero General Public License v3.0 only", and the "Server Side
+ * Public License v 1"; you may not use this file except in compliance with, at
+ * your election, the "Elastic License 2.0", the "GNU Affero General Public
+ * License v3.0 only", or the "Server Side Public License, v 1".
  */
 
 package org.elasticsearch.reservedstate.service;
 
-import org.elasticsearch.Version;
 import org.elasticsearch.action.ActionListener;
-import org.elasticsearch.action.ActionResponse;
 import org.elasticsearch.cluster.ClusterName;
 import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.ClusterStateAckListener;
 import org.elasticsearch.cluster.ClusterStateTaskExecutor;
+import org.elasticsearch.cluster.ClusterStateTaskListener;
 import org.elasticsearch.cluster.metadata.Metadata;
+import org.elasticsearch.cluster.metadata.ProjectId;
+import org.elasticsearch.cluster.metadata.ProjectMetadata;
 import org.elasticsearch.cluster.metadata.ReservedStateErrorMetadata;
 import org.elasticsearch.cluster.metadata.ReservedStateHandlerMetadata;
 import org.elasticsearch.cluster.metadata.ReservedStateMetadata;
 import org.elasticsearch.cluster.routing.RerouteService;
 import org.elasticsearch.cluster.service.ClusterService;
+import org.elasticsearch.cluster.service.MasterServiceTaskQueue;
 import org.elasticsearch.common.settings.ClusterSettings;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.core.Releasable;
+import org.elasticsearch.env.BuildVersion;
+import org.elasticsearch.env.BuildVersionTests;
 import org.elasticsearch.reservedstate.ReservedClusterStateHandler;
 import org.elasticsearch.reservedstate.TransformState;
 import org.elasticsearch.reservedstate.action.ReservedClusterSettingsAction;
@@ -31,36 +36,177 @@ import org.elasticsearch.test.ESTestCase;
 import org.elasticsearch.xcontent.XContentParser;
 import org.elasticsearch.xcontent.XContentParserConfiguration;
 import org.elasticsearch.xcontent.XContentType;
+import org.junit.Assert;
+import org.mockito.ArgumentCaptor;
+import org.mockito.ArgumentMatchers;
 
 import java.io.IOException;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Consumer;
+import java.util.function.LongFunction;
 
-import static org.elasticsearch.reservedstate.service.ReservedStateUpdateTask.checkMetadataVersion;
 import static org.hamcrest.Matchers.anyOf;
 import static org.hamcrest.Matchers.contains;
 import static org.hamcrest.Matchers.containsString;
+import static org.hamcrest.Matchers.equalTo;
+import static org.hamcrest.Matchers.instanceOf;
 import static org.hamcrest.Matchers.is;
+import static org.hamcrest.Matchers.not;
+import static org.hamcrest.Matchers.notNullValue;
+import static org.hamcrest.Matchers.sameInstance;
+import static org.hamcrest.Matchers.startsWith;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.spy;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.verifyNoInteractions;
+import static org.mockito.Mockito.verifyNoMoreInteractions;
 import static org.mockito.Mockito.when;
 
 public class ReservedClusterStateServiceTests extends ESTestCase {
 
+    @SuppressWarnings("unchecked")
+    private static <T extends ClusterStateTaskListener> MasterServiceTaskQueue<T> mockTaskQueue() {
+        return (MasterServiceTaskQueue<T>) mock(MasterServiceTaskQueue.class);
+    }
+
+    private static class TestTaskContext<T extends ClusterStateTaskListener> implements ClusterStateTaskExecutor.TaskContext<T> {
+        private final T task;
+
+        private TestTaskContext(T task) {
+            this.task = task;
+        }
+
+        @Override
+        public T getTask() {
+            return task;
+        }
+
+        @Override
+        public void success(Runnable onPublicationSuccess) {
+            onPublicationSuccess.run();
+        }
+
+        @Override
+        public void success(Consumer<ClusterState> publishedStateConsumer) {}
+
+        @Override
+        public void success(Runnable onPublicationSuccess, ClusterStateAckListener clusterStateAckListener) {}
+
+        @Override
+        public void success(Consumer<ClusterState> publishedStateConsumer, ClusterStateAckListener clusterStateAckListener) {}
+
+        @Override
+        public void onFailure(Exception failure) {}
+
+        @Override
+        public Releasable captureResponseHeaders() {
+            return null;
+        }
+    }
+
+    private static class TestStateHandler<S> implements ReservedClusterStateHandler<S, Map<String, Object>> {
+        private final String name;
+
+        private TestStateHandler(String name) {
+            this.name = name;
+        }
+
+        @Override
+        public String name() {
+            return name;
+        }
+
+        @Override
+        public TransformState<S> transform(Map<String, Object> source, TransformState<S> prevState) throws Exception {
+            return new TransformState<>(prevState.state(), prevState.keys());
+        }
+
+        @Override
+        public Map<String, Object> fromXContent(XContentParser parser) throws IOException {
+            return parser.map();
+        }
+    }
+
+    private static class TestClusterStateHandler extends TestStateHandler<ClusterState> {
+        private TestClusterStateHandler(String name) {
+            super(name);
+        }
+
+        @Override
+        public TransformState<ClusterState> transform(Map<String, Object> source, TransformState<ClusterState> prevState) {
+            ClusterState newState = new ClusterState.Builder(prevState.state()).build();
+            return new TransformState<>(newState, prevState.keys());
+        }
+    }
+
+    private static class TestProjectStateHandler extends TestStateHandler<ProjectMetadata> {
+        private TestProjectStateHandler(String name) {
+            super(name);
+        }
+
+        @Override
+        public TransformState<ProjectMetadata> transform(Map<String, Object> source, TransformState<ProjectMetadata> prevState) {
+            ProjectMetadata newState = ProjectMetadata.builder(prevState.state()).build();
+            return new TransformState<>(newState, prevState.keys());
+        }
+    }
+
+    private static ClusterState setupProject(ClusterState state, Optional<ProjectId> projectId) {
+        return projectId.map(p -> ClusterState.builder(state).putProjectMetadata(ProjectMetadata.builder(p)).build()).orElse(state);
+    }
+
+    private static Map<String, ReservedStateMetadata> getMetadata(ClusterState state, Optional<ProjectId> projectId) {
+        return projectId.map(p -> state.metadata().getProject(p).reservedStateMetadata())
+            .orElseGet(() -> state.metadata().reservedStateMetadata());
+    }
+
+    private static ReservedStateUpdateTask<?> createEmptyTask(
+        Optional<ProjectId> projectId,
+        String namespace,
+        ReservedStateChunk stateChunk,
+        ReservedStateVersionCheck versionCheck
+    ) {
+        return projectId.<ReservedStateUpdateTask<?>>map(
+            p -> new ReservedProjectStateUpdateTask(
+                p,
+                namespace,
+                stateChunk,
+                versionCheck,
+                Map.of(),
+                Set.of(),
+                errorState -> {},
+                ActionListener.noop()
+            )
+        )
+            .orElseGet(
+                () -> new ReservedClusterStateUpdateTask(
+                    namespace,
+                    stateChunk,
+                    versionCheck,
+                    Map.of(),
+                    List.of(),
+                    errorState -> {},
+                    ActionListener.noop()
+                )
+            );
+    }
+
     public void testOperatorController() throws IOException {
         ClusterSettings clusterSettings = new ClusterSettings(Settings.EMPTY, ClusterSettings.BUILT_IN_CLUSTER_SETTINGS);
         ClusterService clusterService = mock(ClusterService.class);
+        when(clusterService.createTaskQueue(any(), any(), any())).thenReturn(mockTaskQueue());
         final ClusterName clusterName = new ClusterName("elasticsearch");
 
         ClusterState state = ClusterState.builder(clusterName).build();
@@ -68,7 +214,9 @@ public class ReservedClusterStateServiceTests extends ESTestCase {
 
         ReservedClusterStateService controller = new ReservedClusterStateService(
             clusterService,
-            List.of(new ReservedClusterSettingsAction(clusterSettings))
+            mock(RerouteService.class),
+            List.of(new ReservedClusterSettingsAction(clusterSettings)),
+            List.of()
         );
 
         String testJSON = """
@@ -88,9 +236,14 @@ public class ReservedClusterStateServiceTests extends ESTestCase {
         AtomicReference<Exception> x = new AtomicReference<>();
 
         try (XContentParser parser = XContentType.JSON.xContent().createParser(XContentParserConfiguration.EMPTY, testJSON)) {
-            controller.process("operator", parser, (e) -> x.set(e));
+            controller.process(
+                "operator",
+                parser,
+                randomFrom(ReservedStateVersionCheck.HIGHER_VERSION_ONLY, ReservedStateVersionCheck.HIGHER_OR_SAME_VERSION),
+                x::set
+            );
 
-            assertTrue(x.get() instanceof IllegalStateException);
+            assertThat(x.get(), instanceOf(IllegalStateException.class));
             assertThat(x.get().getMessage(), containsString("Error processing state change request for operator"));
         }
 
@@ -118,71 +271,70 @@ public class ReservedClusterStateServiceTests extends ESTestCase {
             """;
 
         try (XContentParser parser = XContentType.JSON.xContent().createParser(XContentParserConfiguration.EMPTY, testJSON)) {
-            controller.process("operator", parser, (e) -> {
-                if (e != null) {
-                    fail("Should not fail");
-                }
-            });
+            controller.process(
+                "operator",
+                parser,
+                randomFrom(ReservedStateVersionCheck.HIGHER_VERSION_ONLY, ReservedStateVersionCheck.HIGHER_OR_SAME_VERSION),
+                Assert::assertNull
+            );
         }
     }
 
-    public void testUpdateStateTasks() throws Exception {
+    public void testInitEmptyTask() {
         ClusterService clusterService = mock(ClusterService.class);
+
+        ArgumentCaptor<ReservedStateUpdateTask<?>> updateTask = ArgumentCaptor.captor();
+
+        // grab the update task when it gets given to us
+        when(clusterService.createTaskQueue(ArgumentMatchers.contains("reserved state update"), any(), any())).thenAnswer(i -> {
+            MasterServiceTaskQueue<ReservedStateUpdateTask<?>> queue = mockTaskQueue();
+            doNothing().when(queue).submitTask(any(), updateTask.capture(), any());
+            return queue;
+        });
+
+        ReservedClusterStateService service = new ReservedClusterStateService(
+            clusterService,
+            mock(RerouteService.class),
+            List.of(),
+            List.of()
+        );
+        service.initEmpty("namespace", ActionListener.noop());
+
+        assertThat(updateTask.getValue(), notNullValue());
+        ClusterState state = ClusterState.builder(new ClusterName("test")).build();
+        ClusterState updatedState = updateTask.getValue().execute(state);
+
+        assertThat(
+            updatedState.metadata().reservedStateMetadata(),
+            equalTo(Map.of("namespace", new ReservedStateMetadata("namespace", ReservedStateMetadata.EMPTY_VERSION, Map.of(), null)))
+        );
+    }
+
+    public void testUpdateStateTasks() throws Exception {
         RerouteService rerouteService = mock(RerouteService.class);
 
-        when(clusterService.getRerouteService()).thenReturn(rerouteService);
         ClusterState state = ClusterState.builder(new ClusterName("test")).build();
 
-        ReservedStateUpdateTaskExecutor taskExecutor = new ReservedStateUpdateTaskExecutor(clusterService.getRerouteService());
+        ReservedStateUpdateTaskExecutor taskExecutor = new ReservedStateUpdateTaskExecutor(rerouteService);
 
         AtomicBoolean successCalled = new AtomicBoolean(false);
 
-        ReservedStateUpdateTask task = spy(
-            new ReservedStateUpdateTask(
+        ReservedStateUpdateTask<?> task = spy(
+            createEmptyTask(
+                randomBoolean() ? Optional.empty() : Optional.of(randomProjectIdOrDefault()),
                 "test",
                 null,
-                Collections.emptyMap(),
-                Collections.emptySet(),
-                (errorState) -> {},
-                new ActionListener<>() {
-                    @Override
-                    public void onResponse(ActionResponse.Empty empty) {}
-
-                    @Override
-                    public void onFailure(Exception e) {}
-                }
+                ReservedStateVersionCheck.HIGHER_VERSION_ONLY
             )
         );
 
         doReturn(state).when(task).execute(any());
 
-        ClusterStateTaskExecutor.TaskContext<ReservedStateUpdateTask> taskContext = new ClusterStateTaskExecutor.TaskContext<>() {
-            @Override
-            public ReservedStateUpdateTask getTask() {
-                return task;
-            }
-
+        ClusterStateTaskExecutor.TaskContext<ReservedStateUpdateTask<?>> taskContext = new TestTaskContext<>(task) {
             @Override
             public void success(Runnable onPublicationSuccess) {
-                onPublicationSuccess.run();
+                super.success(onPublicationSuccess);
                 successCalled.set(true);
-            }
-
-            @Override
-            public void success(Consumer<ClusterState> publishedStateConsumer) {}
-
-            @Override
-            public void success(Runnable onPublicationSuccess, ClusterStateAckListener clusterStateAckListener) {}
-
-            @Override
-            public void success(Consumer<ClusterState> publishedStateConsumer, ClusterStateAckListener clusterStateAckListener) {}
-
-            @Override
-            public void onFailure(Exception failure) {}
-
-            @Override
-            public Releasable captureResponseHeaders() {
-                return null;
             }
         };
 
@@ -197,109 +349,194 @@ public class ReservedClusterStateServiceTests extends ESTestCase {
         verify(rerouteService, times(1)).reroute(anyString(), any(), any());
     }
 
+    public void testUpdateErrorState() {
+        ClusterService clusterService = mock(ClusterService.class);
+        ClusterState state = ClusterState.builder(new ClusterName("test")).build();
+
+        Optional<ProjectId> project = randomBoolean() ? Optional.empty() : Optional.of(randomProjectIdOrDefault());
+        state = setupProject(state, project);
+
+        ArgumentCaptor<ReservedStateErrorTask> updateTask = ArgumentCaptor.captor();
+        MasterServiceTaskQueue<ReservedStateErrorTask> errorQueue = mockTaskQueue();
+        doNothing().when(errorQueue).submitTask(any(), updateTask.capture(), any());
+
+        // grab the update task when it gets given to us
+        when(clusterService.<ReservedStateErrorTask>createTaskQueue(ArgumentMatchers.contains("reserved state error"), any(), any()))
+            .thenReturn(errorQueue);
+        when(clusterService.state()).thenReturn(state);
+
+        ReservedClusterStateService service = new ReservedClusterStateService(
+            clusterService,
+            mock(RerouteService.class),
+            List.of(),
+            List.of()
+        );
+
+        ErrorState error = new ErrorState(
+            project,
+            "namespace",
+            2L,
+            ReservedStateVersionCheck.HIGHER_VERSION_ONLY,
+            List.of("error"),
+            ReservedStateErrorMetadata.ErrorKind.TRANSIENT
+        );
+        service.updateErrorState(error);
+
+        assertThat(updateTask.getValue(), notNullValue());
+        verify(errorQueue).submitTask(any(), any(), any());
+
+        ClusterState updatedState = updateTask.getValue().execute(state);
+        assertThat(
+            getMetadata(updatedState, project).get("namespace"),
+            equalTo(
+                new ReservedStateMetadata(
+                    "namespace",
+                    ReservedStateMetadata.NO_VERSION,
+                    Map.of(),
+                    new ReservedStateErrorMetadata(2L, ReservedStateErrorMetadata.ErrorKind.TRANSIENT, List.of("error"))
+                )
+            )
+        );
+
+        // it should not update if the error version is less than the current version
+        when(clusterService.state()).thenReturn(updatedState);
+        ErrorState oldError = new ErrorState(
+            project,
+            "namespace",
+            1L,
+            ReservedStateVersionCheck.HIGHER_VERSION_ONLY,
+            List.of("old error"),
+            ReservedStateErrorMetadata.ErrorKind.TRANSIENT
+        );
+        service.updateErrorState(oldError);
+        verifyNoMoreInteractions(errorQueue);
+    }
+
+    @SuppressWarnings("unchecked")
+    public void testOneUpdateTaskPerQueue() {
+        ClusterState state = ClusterState.builder(new ClusterName("test")).build();
+        MasterServiceTaskQueue<ReservedStateErrorTask> queue1 = mockTaskQueue();
+        MasterServiceTaskQueue<ReservedStateErrorTask> queue2 = mockTaskQueue();
+        MasterServiceTaskQueue<ReservedStateErrorTask> unusedQueue = mockTaskQueue();
+
+        ClusterService clusterService = mock(ClusterService.class);
+        when(clusterService.<ReservedStateErrorTask>createTaskQueue(anyString(), any(), any())) // For non-update tasks
+            .thenReturn(unusedQueue);
+        when(clusterService.<ReservedStateErrorTask>createTaskQueue(ArgumentMatchers.contains("reserved state update"), any(), any()))
+            .thenReturn(queue1, queue2, unusedQueue);
+        when(clusterService.state()).thenReturn(state);
+
+        ReservedClusterStateService service = new ReservedClusterStateService(
+            clusterService,
+            mock(RerouteService.class),
+            List.of(),
+            List.of()
+        );
+        LongFunction<ReservedStateUpdateTask<?>> update = version -> {
+            ReservedStateUpdateTask<?> task = spy(
+                new ReservedClusterStateUpdateTask(
+                    "test",
+                    new ReservedStateChunk(Map.of(), new ReservedStateVersion(version, BuildVersion.current())),
+                    ReservedStateVersionCheck.HIGHER_VERSION_ONLY,
+                    Map.of(),
+                    Set.of(),
+                    errorState -> {},
+                    ActionListener.noop()
+                )
+            );
+            doReturn(state).when(task).execute(any());
+            return task;
+        };
+
+        service.submitUpdateTask("test", update.apply(2L));
+        service.submitUpdateTask("test", update.apply(3L));
+
+        // One task to each queue
+        verify(queue1).submitTask(any(), any(), any());
+        verify(queue2).submitTask(any(), any(), any());
+
+        // No additional unexpected tasks
+        verifyNoInteractions(unusedQueue);
+    }
+
+    @SuppressWarnings("unchecked")
+    public void testOneErrorTaskPerQueue() {
+        ClusterState state = ClusterState.builder(new ClusterName("test")).build();
+        Optional<ProjectId> projectId = randomBoolean() ? Optional.empty() : Optional.of(randomProjectIdOrDefault());
+        state = setupProject(state, projectId);
+        MasterServiceTaskQueue<ReservedStateErrorTask> queue1 = mockTaskQueue();
+        MasterServiceTaskQueue<ReservedStateErrorTask> queue2 = mockTaskQueue();
+        MasterServiceTaskQueue<ReservedStateErrorTask> unusedQueue = mockTaskQueue();
+
+        ClusterService clusterService = mock(ClusterService.class);
+        when(clusterService.<ReservedStateErrorTask>createTaskQueue(anyString(), any(), any())) // For non-error tasks
+            .thenReturn(unusedQueue);
+        when(clusterService.<ReservedStateErrorTask>createTaskQueue(ArgumentMatchers.contains("reserved state error"), any(), any()))
+            .thenReturn(queue1, queue2, unusedQueue);
+        when(clusterService.state()).thenReturn(state);
+
+        ReservedClusterStateService service = new ReservedClusterStateService(
+            clusterService,
+            mock(RerouteService.class),
+            List.of(),
+            List.of()
+        );
+        LongFunction<ErrorState> error = version -> new ErrorState(
+            projectId,
+            "namespace",
+            version,
+            ReservedStateVersionCheck.HIGHER_VERSION_ONLY,
+            List.of("error"),
+            ReservedStateErrorMetadata.ErrorKind.TRANSIENT
+        );
+        service.updateErrorState(error.apply(2));
+        service.updateErrorState(error.apply(3));
+
+        // One task to each queue
+        verify(queue1).submitTask(any(), any(), any());
+        verify(queue2).submitTask(any(), any(), any());
+
+        // No additional unexpected tasks
+        verifyNoInteractions(unusedQueue);
+    }
+
     public void testErrorStateTask() throws Exception {
         ClusterState state = ClusterState.builder(new ClusterName("test")).build();
+        Optional<ProjectId> projectId = randomBoolean() ? Optional.empty() : Optional.of(randomProjectIdOrDefault());
+        state = setupProject(state, projectId);
 
         final var listenerCompleted = new AtomicBoolean(false);
 
         ReservedStateErrorTask task = spy(
             new ReservedStateErrorTask(
-                new ErrorState("test", 1L, List.of("some parse error", "some io error"), ReservedStateErrorMetadata.ErrorKind.PARSING),
-                new ActionListener<>() {
-                    @Override
-                    public void onResponse(ActionResponse.Empty empty) {
-                        listenerCompleted.set(true);
-                    }
-
-                    @Override
-                    public void onFailure(Exception e) {}
-                }
+                new ErrorState(
+                    projectId,
+                    "test",
+                    1L,
+                    ReservedStateVersionCheck.HIGHER_VERSION_ONLY,
+                    List.of("some parse error", "some io error"),
+                    ReservedStateErrorMetadata.ErrorKind.PARSING
+                ),
+                ActionListener.running(() -> listenerCompleted.set(true))
             )
         );
 
-        ReservedStateErrorTaskExecutor.TaskContext<ReservedStateErrorTask> taskContext =
-            new ReservedStateErrorTaskExecutor.TaskContext<>() {
-                @Override
-                public ReservedStateErrorTask getTask() {
-                    return task;
-                }
-
-                @Override
-                public void success(Runnable onPublicationSuccess) {
-                    onPublicationSuccess.run();
-                }
-
-                @Override
-                public void success(Consumer<ClusterState> publishedStateConsumer) {}
-
-                @Override
-                public void success(Runnable onPublicationSuccess, ClusterStateAckListener clusterStateAckListener) {}
-
-                @Override
-                public void success(Consumer<ClusterState> publishedStateConsumer, ClusterStateAckListener clusterStateAckListener) {}
-
-                @Override
-                public void onFailure(Exception failure) {}
-
-                @Override
-                public Releasable captureResponseHeaders() {
-                    return null;
-                }
-            };
-
-        ReservedStateErrorTaskExecutor executor = new ReservedStateErrorTaskExecutor();
-
-        ClusterState newState = executor.execute(
-            new ClusterStateTaskExecutor.BatchExecutionContext<>(state, List.of(taskContext), () -> null)
+        ClusterState newState = new ReservedStateErrorTaskExecutor().execute(
+            new ClusterStateTaskExecutor.BatchExecutionContext<>(state, List.of(new TestTaskContext<>(task)), () -> null)
         );
 
         verify(task, times(1)).execute(any());
 
-        ReservedStateMetadata operatorMetadata = newState.metadata().reservedStateMetadata().get("test");
+        ReservedStateMetadata operatorMetadata = getMetadata(newState, projectId).get("test");
         assertNotNull(operatorMetadata);
         assertNotNull(operatorMetadata.errorMetadata());
-        assertEquals(1L, (long) operatorMetadata.errorMetadata().version());
-        assertEquals(ReservedStateErrorMetadata.ErrorKind.PARSING, operatorMetadata.errorMetadata().errorKind());
+        assertThat(operatorMetadata.errorMetadata().version(), is(1L));
+        assertThat(operatorMetadata.errorMetadata().errorKind(), is(ReservedStateErrorMetadata.ErrorKind.PARSING));
         assertThat(operatorMetadata.errorMetadata().errors(), contains("some parse error", "some io error"));
         assertTrue(listenerCompleted.get());
     }
 
     public void testUpdateTaskDuplicateError() {
-        ReservedClusterStateHandler<Map<String, Object>> newStateMaker = new ReservedClusterStateHandler<>() {
-            @Override
-            public String name() {
-                return "maker";
-            }
-
-            @Override
-            public TransformState transform(Object source, TransformState prevState) throws Exception {
-                ClusterState newState = new ClusterState.Builder(prevState.state()).build();
-                return new TransformState(newState, prevState.keys());
-            }
-
-            @Override
-            public Map<String, Object> fromXContent(XContentParser parser) throws IOException {
-                return parser.map();
-            }
-        };
-
-        ReservedClusterStateHandler<Map<String, Object>> exceptionThrower = new ReservedClusterStateHandler<>() {
-            @Override
-            public String name() {
-                return "one";
-            }
-
-            @Override
-            public TransformState transform(Object source, TransformState prevState) throws Exception {
-                throw new Exception("anything");
-            }
-
-            @Override
-            public Map<String, Object> fromXContent(XContentParser parser) throws IOException {
-                return parser.map();
-            }
-        };
-
         ReservedStateHandlerMetadata hmOne = new ReservedStateHandlerMetadata("one", Set.of("a", "b"));
         ReservedStateErrorMetadata emOne = new ReservedStateErrorMetadata(
             2L,
@@ -313,33 +550,106 @@ public class ReservedClusterStateServiceTests extends ESTestCase {
             .putHandler(hmOne)
             .build();
 
-        Metadata metadata = Metadata.builder().put(operatorMetadata).build();
+        Optional<ProjectId> projectId = randomBoolean() ? Optional.empty() : Optional.of(randomProjectIdOrDefault());
+
+        Metadata metadata = projectId.map(p -> Metadata.builder().put(ProjectMetadata.builder(p).put(operatorMetadata)))
+            .orElseGet(() -> Metadata.builder().put(operatorMetadata))
+            .build();
         ClusterState state = ClusterState.builder(new ClusterName("test")).metadata(metadata).build();
 
-        assertFalse(ReservedClusterStateService.isNewError(operatorMetadata, 2L));
-        assertFalse(ReservedClusterStateService.isNewError(operatorMetadata, 1L));
-        assertTrue(ReservedClusterStateService.isNewError(operatorMetadata, 3L));
-        assertTrue(ReservedClusterStateService.isNewError(null, 1L));
+        assertFalse(ReservedStateErrorTask.isNewError(operatorMetadata, 2L, ReservedStateVersionCheck.HIGHER_VERSION_ONLY));
+        assertFalse(ReservedStateErrorTask.isNewError(operatorMetadata, 1L, ReservedStateVersionCheck.HIGHER_VERSION_ONLY));
+        assertTrue(ReservedStateErrorTask.isNewError(operatorMetadata, 2L, ReservedStateVersionCheck.HIGHER_OR_SAME_VERSION));
+        assertTrue(ReservedStateErrorTask.isNewError(operatorMetadata, 3L, ReservedStateVersionCheck.HIGHER_VERSION_ONLY));
+        assertTrue(ReservedStateErrorTask.isNewError(null, 1L, ReservedStateVersionCheck.HIGHER_VERSION_ONLY));
+        assertTrue(ReservedStateErrorTask.isNewError(null, 1L, ReservedStateVersionCheck.HIGHER_OR_SAME_VERSION));
+
+        var chunk = new ReservedStateChunk(
+            Map.of("one", Map.of(), "maker", Map.of()),
+            new ReservedStateVersion(2L, BuildVersion.current())
+        );
 
         // We submit a task with two handler, one will cause an exception, the other will create a new state.
         // When we fail to update the metadata because of version, we ensure that the returned state is equal to the
         // original state by pointer reference to avoid cluster state update task to run.
-        ReservedStateUpdateTask task = new ReservedStateUpdateTask(
-            "namespace_one",
-            new ReservedStateChunk(Map.of("one", "two", "maker", "three"), new ReservedStateVersion(2L, Version.CURRENT)),
-            Map.of(exceptionThrower.name(), exceptionThrower, newStateMaker.name(), newStateMaker),
-            List.of(exceptionThrower.name(), newStateMaker.name()),
-            (errorState) -> { assertFalse(ReservedClusterStateService.isNewError(operatorMetadata, errorState.version())); },
-            new ActionListener<>() {
+        ReservedStateUpdateTask<?> task;
+        if (projectId.isPresent()) {
+            ReservedClusterStateHandler<ProjectMetadata, Map<String, Object>> newStateMaker = new TestProjectStateHandler("maker");
+            ReservedClusterStateHandler<ProjectMetadata, Map<String, Object>> exceptionThrower = new TestStateHandler<>("one") {
                 @Override
-                public void onResponse(ActionResponse.Empty empty) {}
+                public TransformState<ProjectMetadata> transform(Map<String, Object> source, TransformState<ProjectMetadata> prevState)
+                    throws Exception {
+                    throw new Exception("anything");
+                }
+            };
 
+            var orderedHandlers = List.of(exceptionThrower.name(), newStateMaker.name());
+
+            task = new ReservedProjectStateUpdateTask(
+                projectId.get(),
+                "namespace_one",
+                chunk,
+                ReservedStateVersionCheck.HIGHER_VERSION_ONLY,
+                Map.of(exceptionThrower.name(), exceptionThrower, newStateMaker.name(), newStateMaker),
+                orderedHandlers,
+                e -> assertFalse(ReservedStateErrorTask.isNewError(operatorMetadata, e.version(), e.versionCheck())),
+                ActionListener.noop()
+            );
+
+            ClusterService clusterService = mock(ClusterService.class);
+            final var controller = spy(
+                new ReservedClusterStateService(
+                    clusterService,
+                    mock(RerouteService.class),
+                    List.of(),
+                    List.of(newStateMaker, exceptionThrower)
+                )
+            );
+
+            var trialRunErrors = controller.trialRun(
+                "namespace_one",
+                state.metadata().getProject(projectId.get()),
+                chunk,
+                new LinkedHashSet<>(orderedHandlers)
+            );
+            assertThat(trialRunErrors, contains(containsString("Error processing one state change:")));
+        } else {
+            ReservedClusterStateHandler<ClusterState, Map<String, Object>> newStateMaker = new TestClusterStateHandler("maker");
+            ReservedClusterStateHandler<ClusterState, Map<String, Object>> exceptionThrower = new TestStateHandler<>("one") {
                 @Override
-                public void onFailure(Exception e) {}
-            }
-        );
+                public TransformState<ClusterState> transform(Map<String, Object> source, TransformState<ClusterState> prevState)
+                    throws Exception {
+                    throw new Exception("anything");
+                }
+            };
 
-        // We exit on duplicate errors before we update the cluster state error metadata
+            var orderedHandlers = List.of(exceptionThrower.name(), newStateMaker.name());
+
+            task = new ReservedClusterStateUpdateTask(
+                "namespace_one",
+                chunk,
+                ReservedStateVersionCheck.HIGHER_VERSION_ONLY,
+                Map.of(exceptionThrower.name(), exceptionThrower, newStateMaker.name(), newStateMaker),
+                orderedHandlers,
+                e -> assertFalse(ReservedStateErrorTask.isNewError(operatorMetadata, e.version(), e.versionCheck())),
+                ActionListener.noop()
+            );
+
+            ClusterService clusterService = mock(ClusterService.class);
+            final var controller = spy(
+                new ReservedClusterStateService(
+                    clusterService,
+                    mock(RerouteService.class),
+                    List.of(newStateMaker, exceptionThrower),
+                    List.of()
+                )
+            );
+
+            var trialRunErrors = controller.trialRun("namespace_one", state, chunk, new LinkedHashSet<>(orderedHandlers));
+            assertThat(trialRunErrors, contains(containsString("Error processing one state change:")));
+        }
+
+        // We exit on duplicate errors before we update the reserved state error metadata
         assertThat(
             expectThrows(IllegalStateException.class, () -> task.execute(state)).getMessage(),
             containsString("Error processing state change request for namespace_one")
@@ -358,10 +668,12 @@ public class ReservedClusterStateServiceTests extends ESTestCase {
             .putHandler(hmOne)
             .build();
 
-        metadata = Metadata.builder().put(opMetadata).build();
+        metadata = projectId.map(p -> Metadata.builder().put(ProjectMetadata.builder(p).put(opMetadata)))
+            .orElseGet(() -> Metadata.builder().put(opMetadata))
+            .build();
         ClusterState newState = ClusterState.builder(new ClusterName("test")).metadata(metadata).build();
 
-        // We exit on duplicate errors before we update the cluster state error metadata
+        // We exit on duplicate errors before we update the reserved state error metadata
         assertThat(
             expectThrows(IllegalStateException.class, () -> task.execute(newState)).getMessage(),
             containsString("Error processing state change request for namespace_one")
@@ -371,24 +683,77 @@ public class ReservedClusterStateServiceTests extends ESTestCase {
     public void testCheckMetadataVersion() {
         ReservedStateMetadata operatorMetadata = ReservedStateMetadata.builder("test").version(123L).build();
 
-        assertTrue(checkMetadataVersion("operator", operatorMetadata, new ReservedStateVersion(124L, Version.CURRENT)));
+        Optional<ProjectId> projectId = randomBoolean() ? Optional.empty() : Optional.of(randomProjectIdOrDefault());
+        Metadata metadata = projectId.map(p -> Metadata.builder().put(ProjectMetadata.builder(p).put(operatorMetadata)))
+            .orElseGet(() -> Metadata.builder().put(operatorMetadata))
+            .build();
+        ClusterState state = ClusterState.builder(new ClusterName("test")).metadata(metadata).build();
 
-        assertFalse(checkMetadataVersion("operator", operatorMetadata, new ReservedStateVersion(123L, Version.CURRENT)));
-
-        assertFalse(
-            checkMetadataVersion("operator", operatorMetadata, new ReservedStateVersion(124L, Version.fromId(Version.CURRENT.id + 1)))
+        ReservedStateUpdateTask<?> task = createEmptyTask(
+            projectId,
+            "test",
+            new ReservedStateChunk(Map.of(), new ReservedStateVersion(124L, BuildVersion.current())),
+            ReservedStateVersionCheck.HIGHER_VERSION_ONLY
         );
+        assertThat("Cluster state should be modified", task.execute(state), not(sameInstance(state)));
+        task = createEmptyTask(
+            projectId,
+            "test",
+            new ReservedStateChunk(Map.of(), new ReservedStateVersion(124L, BuildVersion.current())),
+            ReservedStateVersionCheck.HIGHER_VERSION_ONLY
+        );
+        assertThat("Cluster state should be modified", task.execute(state), not(sameInstance(state)));
+
+        task = createEmptyTask(
+            projectId,
+            "test",
+            new ReservedStateChunk(Map.of(), new ReservedStateVersion(123L, BuildVersion.current())),
+            ReservedStateVersionCheck.HIGHER_VERSION_ONLY
+        );
+        assertThat("Cluster state should not be modified", task.execute(state), sameInstance(state));
+        task = createEmptyTask(
+            projectId,
+            "test",
+            new ReservedStateChunk(Map.of(), new ReservedStateVersion(123L, BuildVersion.current())),
+            ReservedStateVersionCheck.HIGHER_OR_SAME_VERSION
+        );
+        assertThat("Cluster state should be modified", task.execute(state), not(sameInstance(state)));
+
+        task = createEmptyTask(
+            projectId,
+            "test",
+            new ReservedStateChunk(Map.of(), new ReservedStateVersion(122L, BuildVersion.current())),
+            ReservedStateVersionCheck.HIGHER_VERSION_ONLY
+        );
+        assertThat("Cluster state should not be modified", task.execute(state), sameInstance(state));
+        task = createEmptyTask(
+            projectId,
+            "test",
+            new ReservedStateChunk(Map.of(), new ReservedStateVersion(122L, BuildVersion.current())),
+            ReservedStateVersionCheck.HIGHER_OR_SAME_VERSION
+        );
+        assertThat("Cluster state should not be modified", task.execute(state), sameInstance(state));
+
+        task = createEmptyTask(
+            projectId,
+            "test",
+            new ReservedStateChunk(Map.of(), new ReservedStateVersion(124L, BuildVersionTests.increment(BuildVersion.current()))),
+            ReservedStateVersionCheck.HIGHER_VERSION_ONLY
+        );
+        assertThat("Cluster state should not be modified", task.execute(state), sameInstance(state));
+        task = createEmptyTask(
+            projectId,
+            "test",
+            new ReservedStateChunk(Map.of(), new ReservedStateVersion(124L, BuildVersionTests.increment(BuildVersion.current()))),
+            ReservedStateVersionCheck.HIGHER_OR_SAME_VERSION
+        );
+        assertThat("Cluster state should not be modified", task.execute(state), sameInstance(state));
     }
 
-    private ReservedClusterStateHandler<Map<String, Object>> makeHandlerHelper(final String name, final List<String> deps) {
-        return new ReservedClusterStateHandler<>() {
+    private <S> ReservedClusterStateHandler<S, Map<String, Object>> makeHandlerHelper(String name, List<String> deps) {
+        return new TestStateHandler<>(name) {
             @Override
-            public String name() {
-                return name;
-            }
-
-            @Override
-            public TransformState transform(Object source, TransformState prevState) throws Exception {
+            public TransformState<S> transform(Map<String, Object> source, TransformState<S> prevState) throws Exception {
                 return null;
             }
 
@@ -396,44 +761,86 @@ public class ReservedClusterStateServiceTests extends ESTestCase {
             public Collection<String> dependencies() {
                 return deps;
             }
-
-            @Override
-            public Map<String, Object> fromXContent(XContentParser parser) throws IOException {
-                return parser.map();
-            }
         };
     }
 
-    public void testHandlerOrdering() {
-        ReservedClusterStateHandler<Map<String, Object>> oh1 = makeHandlerHelper("one", List.of("two", "three"));
-        ReservedClusterStateHandler<Map<String, Object>> oh2 = makeHandlerHelper("two", Collections.emptyList());
-        ReservedClusterStateHandler<Map<String, Object>> oh3 = makeHandlerHelper("three", List.of("two"));
+    public void testClusterHandlerOrdering() {
+        ReservedClusterStateHandler<ClusterState, Map<String, Object>> oh1 = makeHandlerHelper("one", List.of("two", "three"));
+        ReservedClusterStateHandler<ClusterState, Map<String, Object>> oh2 = makeHandlerHelper("two", List.of());
+        ReservedClusterStateHandler<ClusterState, Map<String, Object>> oh3 = makeHandlerHelper("three", List.of("two"));
 
         ClusterService clusterService = mock(ClusterService.class);
-        final var controller = new ReservedClusterStateService(clusterService, List.of(oh1, oh2, oh3));
-        Collection<String> ordered = controller.orderedStateHandlers(Set.of("one", "two", "three"));
+        final var controller = new ReservedClusterStateService(
+            clusterService,
+            mock(RerouteService.class),
+            List.of(oh1, oh2, oh3),
+            List.of()
+        );
+        Collection<String> ordered = controller.orderedClusterStateHandlers(Set.of("one", "two", "three"));
         assertThat(ordered, contains("two", "three", "one"));
 
         // assure that we bail on unknown handler
-        assertEquals(
-            "Unknown handler type: four",
-            expectThrows(IllegalStateException.class, () -> controller.orderedStateHandlers(Set.of("one", "two", "three", "four")))
-                .getMessage()
+        assertThat(
+            expectThrows(IllegalStateException.class, () -> controller.orderedClusterStateHandlers(Set.of("one", "two", "three", "four")))
+                .getMessage(),
+            is("Unknown handler type: four")
         );
 
         // assure that we bail on missing dependency link
-        assertEquals(
-            "Missing handler dependency definition: one -> three",
-            expectThrows(IllegalStateException.class, () -> controller.orderedStateHandlers(Set.of("one", "two"))).getMessage()
+        assertThat(
+            expectThrows(IllegalStateException.class, () -> controller.orderedClusterStateHandlers(Set.of("one", "two"))).getMessage(),
+            is("Missing handler dependency definition: one -> three")
         );
 
         // Change the second handler so that we create cycle
         oh2 = makeHandlerHelper("two", List.of("one"));
 
-        final var controller1 = new ReservedClusterStateService(clusterService, List.of(oh1, oh2));
+        final var controller1 = new ReservedClusterStateService(clusterService, mock(RerouteService.class), List.of(oh1, oh2), List.of());
 
         assertThat(
-            expectThrows(IllegalStateException.class, () -> controller1.orderedStateHandlers(Set.of("one", "two"))).getMessage(),
+            expectThrows(IllegalStateException.class, () -> controller1.orderedClusterStateHandlers(Set.of("one", "two"))).getMessage(),
+            anyOf(
+                is("Cycle found in settings dependencies: one -> two -> one"),
+                is("Cycle found in settings dependencies: two -> one -> two")
+            )
+        );
+    }
+
+    public void testProjectHandlerOrdering() {
+        ReservedClusterStateHandler<ProjectMetadata, Map<String, Object>> oh1 = makeHandlerHelper("one", List.of("two", "three"));
+        ReservedClusterStateHandler<ProjectMetadata, Map<String, Object>> oh2 = makeHandlerHelper("two", List.of());
+        ReservedClusterStateHandler<ProjectMetadata, Map<String, Object>> oh3 = makeHandlerHelper("three", List.of("two"));
+
+        ClusterService clusterService = mock(ClusterService.class);
+        final var controller = new ReservedClusterStateService(
+            clusterService,
+            mock(RerouteService.class),
+            List.of(),
+            List.of(oh1, oh2, oh3)
+        );
+        Collection<String> ordered = controller.orderedProjectStateHandlers(Set.of("one", "two", "three"));
+        assertThat(ordered, contains("two", "three", "one"));
+
+        // assure that we bail on unknown handler
+        assertThat(
+            expectThrows(IllegalStateException.class, () -> controller.orderedProjectStateHandlers(Set.of("one", "two", "three", "four")))
+                .getMessage(),
+            is("Unknown handler type: four")
+        );
+
+        // assure that we bail on missing dependency link
+        assertThat(
+            expectThrows(IllegalStateException.class, () -> controller.orderedProjectStateHandlers(Set.of("one", "two"))).getMessage(),
+            is("Missing handler dependency definition: one -> three")
+        );
+
+        // Change the second handler so that we create cycle
+        oh2 = makeHandlerHelper("two", List.of("one"));
+
+        final var controller1 = new ReservedClusterStateService(clusterService, mock(RerouteService.class), List.of(), List.of(oh1, oh2));
+
+        assertThat(
+            expectThrows(IllegalStateException.class, () -> controller1.orderedProjectStateHandlers(Set.of("one", "two"))).getMessage(),
             anyOf(
                 is("Cycle found in settings dependencies: one -> two -> one"),
                 is("Cycle found in settings dependencies: two -> one -> two")
@@ -449,32 +856,56 @@ public class ReservedClusterStateServiceTests extends ESTestCase {
         ClusterState state = ClusterState.builder(clusterName).build();
         when(clusterService.state()).thenReturn(state);
 
-        assertTrue(
+        assertThat(
             expectThrows(
-                IllegalStateException.class,
+                IllegalArgumentException.class,
                 () -> new ReservedClusterStateService(
                     clusterService,
-                    List.of(new ReservedClusterSettingsAction(clusterSettings), new TestHandler())
+                    mock(RerouteService.class),
+                    List.of(new ReservedClusterSettingsAction(clusterSettings), new TestStateHandler<>(ReservedClusterSettingsAction.NAME)),
+                    List.of()
                 )
-            ).getMessage().startsWith("Duplicate key cluster_settings")
+            ).getMessage(),
+            startsWith("Duplicate handler name: [cluster_settings]")
+        );
+
+        assertThat(
+            expectThrows(
+                IllegalArgumentException.class,
+                () -> new ReservedClusterStateService(
+                    clusterService,
+                    mock(RerouteService.class),
+                    List.of(new ReservedClusterSettingsAction(clusterSettings)),
+                    List.of(new TestStateHandler<>(ReservedClusterSettingsAction.NAME))
+                )
+            ).getMessage(),
+            startsWith("Duplicate handler name: [cluster_settings]")
         );
     }
 
-    class TestHandler implements ReservedClusterStateHandler<Map<String, Object>> {
+    public void testCheckAndReportError() {
+        ClusterService clusterService = mock(ClusterService.class);
+        Optional<ProjectId> projectId = randomBoolean() ? Optional.empty() : Optional.of(randomProjectIdOrDefault());
+        var state = ClusterState.builder(new ClusterName("elasticsearch")).build();
+        state = setupProject(state, projectId);
+        when(clusterService.state()).thenReturn(state);
+        when(clusterService.createTaskQueue(any(), any(), any())).thenReturn(mockTaskQueue());
 
-        @Override
-        public String name() {
-            return ReservedClusterSettingsAction.NAME;
-        }
+        final var controller = spy(new ReservedClusterStateService(clusterService, mock(RerouteService.class), List.of(), List.of()));
 
-        @Override
-        public TransformState transform(Object source, TransformState prevState) {
-            return prevState;
-        }
+        assertNull(controller.checkAndReportError(projectId, "test", List.of(), null, ReservedStateVersionCheck.HIGHER_VERSION_ONLY));
+        verify(controller, times(0)).updateErrorState(any());
 
-        @Override
-        public Map<String, Object> fromXContent(XContentParser parser) throws IOException {
-            return parser.map();
-        }
+        var version = new ReservedStateVersion(2L, BuildVersion.current());
+        var error = controller.checkAndReportError(
+            projectId,
+            "test",
+            List.of("test error"),
+            version,
+            ReservedStateVersionCheck.HIGHER_VERSION_ONLY
+        );
+        assertThat(error, instanceOf(IllegalStateException.class));
+        assertThat(error.getMessage(), is("Error processing state change request for test, errors: test error"));
+        verify(controller, times(1)).updateErrorState(any());
     }
 }
