@@ -110,10 +110,7 @@ public class AutoFollowCoordinator extends AbstractLifecycleComponent implements
     private long numberOfFailedRemoteClusterStateRequests = 0;
     private final LinkedHashMap<AutoFollowErrorKey, Tuple<Long, ElasticsearchException>> recentAutoFollowErrors;
 
-    private static final class AutoFollowErrorKey {
-        private final String pattern;
-        private final String index;
-
+    private record AutoFollowErrorKey(String pattern, String index) {
         private AutoFollowErrorKey(String pattern, String index) {
             this.pattern = Objects.requireNonNull(pattern);
             this.index = index;
@@ -260,6 +257,7 @@ public class AutoFollowCoordinator extends AbstractLifecycleComponent implements
 
     void updateAutoFollowers(ClusterState followerClusterState) {
         final AutoFollowMetadata autoFollowMetadata = followerClusterState.getMetadata()
+            .getProject()
             .custom(AutoFollowMetadata.TYPE, AutoFollowMetadata.EMPTY);
 
         if (autoFollowMetadata.getPatterns().isEmpty() && this.autoFollowers.isEmpty()) {
@@ -299,17 +297,16 @@ public class AutoFollowCoordinator extends AbstractLifecycleComponent implements
                     final long metadataVersion,
                     final BiConsumer<ClusterStateResponse, Exception> handler
                 ) {
-                    final ClusterStateRequest request = new ClusterStateRequest();
-                    request.clear();
-                    request.metadata(true);
-                    request.routingTable(true);
-                    request.waitForMetadataVersion(metadataVersion);
-                    request.waitForTimeout(waitForMetadataTimeOut);
                     // TODO: set non-compliant status on auto-follow coordination that can be viewed via a stats API
                     CcrLicenseChecker.checkRemoteClusterLicenseAndFetchClusterState(
                         client,
                         remoteCluster,
-                        request,
+                        new ClusterStateRequest(waitForMetadataTimeOut).clear()
+                            .metadata(true)
+                            .routingTable(true)
+                            .local(true)
+                            .waitForMetadataVersion(metadataVersion)
+                            .waitForTimeout(waitForMetadataTimeOut),
                         e -> handler.accept(null, e),
                         remoteClusterStateResponse -> handler.accept(remoteClusterStateResponse, null)
                     );
@@ -469,7 +466,7 @@ public class AutoFollowCoordinator extends AbstractLifecycleComponent implements
 
             lastAutoFollowTimeInMillis = relativeTimeProvider.getAsLong();
             final ClusterState clusterState = followerClusterStateSupplier.get();
-            final AutoFollowMetadata autoFollowMetadata = clusterState.metadata().custom(AutoFollowMetadata.TYPE);
+            final AutoFollowMetadata autoFollowMetadata = clusterState.metadata().getProject().custom(AutoFollowMetadata.TYPE);
             if (autoFollowMetadata == null) {
                 LOGGER.info("auto-follower for cluster [{}] has stopped, because there is no autofollow metadata", remoteCluster);
                 return;
@@ -599,24 +596,26 @@ public class AutoFollowCoordinator extends AbstractLifecycleComponent implements
             Consumer<AutoFollowResult> resultHandler
         ) {
             final GroupedActionListener<Tuple<Index, Exception>> groupedListener = new GroupedActionListener<>(
-                ActionListener.wrap(
-                    rs -> resultHandler.accept(new AutoFollowResult(autoFollowPattenName, new ArrayList<>(rs))),
-                    e -> { throw new AssertionError("must never happen", e); }
-                ),
-                leaderIndicesToFollow.size()
+                leaderIndicesToFollow.size(),
+                ActionListener.wrap(rs -> resultHandler.accept(new AutoFollowResult(autoFollowPattenName, new ArrayList<>(rs))), e -> {
+                    final var illegalStateException = new IllegalStateException("must never happen", e);
+                    LOGGER.error("must never happen", illegalStateException);
+                    assert false : illegalStateException;
+                    throw illegalStateException;
+                })
             );
 
             // Loop through all the as-of-yet-unfollowed indices from the leader
             for (final Index indexToFollow : leaderIndicesToFollow) {
                 // Look up the abstraction for the given index, e.g., an index ".ds-foo" could look
                 // up the Data Stream "foo"
-                IndexAbstraction indexAbstraction = remoteMetadata.getIndicesLookup().get(indexToFollow.getName());
+                IndexAbstraction indexAbstraction = remoteMetadata.getProject().getIndicesLookup().get(indexToFollow.getName());
                 // Ensure that the remote cluster doesn't have other patterns
                 // that would follow the index, there can be only one.
                 List<String> otherMatchingPatterns = patternsForTheSameRemoteCluster.stream()
                     .filter(otherPattern -> otherPattern.v2().match(indexAbstraction))
                     .map(Tuple::v1)
-                    .collect(Collectors.toList());
+                    .toList();
                 if (otherMatchingPatterns.size() != 0) {
                     groupedListener.onResponse(
                         new Tuple<>(
@@ -633,7 +632,7 @@ public class AutoFollowCoordinator extends AbstractLifecycleComponent implements
                         )
                     );
                 } else {
-                    final IndexMetadata leaderIndexMetadata = remoteMetadata.getIndexSafe(indexToFollow);
+                    final IndexMetadata leaderIndexMetadata = remoteMetadata.getProject().getIndexSafe(indexToFollow);
                     // First ensure that the index on the leader that we want to follow has soft-deletes enabled
                     if (IndexSettings.INDEX_SOFT_DELETES_SETTING.get(leaderIndexMetadata.getSettings()) == false) {
                         String message = String.format(
@@ -686,7 +685,7 @@ public class AutoFollowCoordinator extends AbstractLifecycleComponent implements
 
         private static boolean leaderIndexAlreadyFollowed(AutoFollowPattern autoFollowPattern, Index leaderIndex, Metadata localMetadata) {
             String followIndexName = getFollowerIndexName(autoFollowPattern, leaderIndex.getName());
-            IndexMetadata indexMetadata = localMetadata.index(followIndexName);
+            IndexMetadata indexMetadata = localMetadata.getProject().index(followIndexName);
             if (indexMetadata != null) {
                 // If an index with the same name exists, but it is not a follow index for this leader index then
                 // we should let the auto follower attempt to auto follow it, so it can fail later and
@@ -714,7 +713,8 @@ public class AutoFollowCoordinator extends AbstractLifecycleComponent implements
             final String leaderIndexName = indexToFollow.getName();
             final String followIndexName = getFollowerIndexName(pattern, leaderIndexName);
 
-            PutFollowAction.Request request = new PutFollowAction.Request();
+            // TODO use longer timeouts here? see https://github.com/elastic/elasticsearch/issues/109150
+            PutFollowAction.Request request = new PutFollowAction.Request(TimeValue.THIRTY_SECONDS, TimeValue.THIRTY_SECONDS);
             request.setRemoteCluster(remoteCluster);
             request.setLeaderIndex(indexToFollow.getName());
             request.setFollowerIndex(followIndexName);
@@ -722,7 +722,7 @@ public class AutoFollowCoordinator extends AbstractLifecycleComponent implements
             // If there was a pattern specified for renaming the backing index, and this index is
             // part of a data stream, then send the new data stream name as part of the request.
             if (pattern.getFollowIndexPattern() != null && indexAbstraction.getParentDataStream() != null) {
-                String dataStreamName = indexAbstraction.getParentDataStream().getDataStream().getName();
+                String dataStreamName = indexAbstraction.getParentDataStream().getName();
                 // Send the follow index pattern as the data stream pattern, so that data streams can be
                 // renamed accordingly (not only the backing indices)
                 request.setDataStreamName(pattern.getFollowIndexPattern().replace(AUTO_FOLLOW_PATTERN_REPLACEMENT, dataStreamName));
@@ -809,11 +809,12 @@ public class AutoFollowCoordinator extends AbstractLifecycleComponent implements
             List<String> followedIndexUUIDs
         ) {
             List<Index> leaderIndicesToFollow = new ArrayList<>();
-            for (IndexMetadata leaderIndexMetadata : remoteClusterState.getMetadata()) {
+            for (IndexMetadata leaderIndexMetadata : remoteClusterState.getMetadata().getProject()) {
                 if (leaderIndexMetadata.getState() != IndexMetadata.State.OPEN) {
                     continue;
                 }
                 IndexAbstraction indexAbstraction = remoteClusterState.getMetadata()
+                    .getProject()
                     .getIndicesLookup()
                     .get(leaderIndexMetadata.getIndex().getName());
                 if (autoFollowPattern.isActive() && autoFollowPattern.match(indexAbstraction)) {
@@ -878,7 +879,7 @@ public class AutoFollowCoordinator extends AbstractLifecycleComponent implements
 
         static Function<ClusterState, ClusterState> recordLeaderIndexAsFollowFunction(String name, Index indexToFollow) {
             return currentState -> {
-                AutoFollowMetadata currentAutoFollowMetadata = currentState.metadata().custom(AutoFollowMetadata.TYPE);
+                AutoFollowMetadata currentAutoFollowMetadata = currentState.metadata().getProject().custom(AutoFollowMetadata.TYPE);
                 Map<String, List<String>> newFollowedIndexUUIDS = new HashMap<>(currentAutoFollowMetadata.getFollowedLeaderIndexUUIDs());
                 if (newFollowedIndexUUIDS.containsKey(name) == false) {
                     // A delete auto follow pattern request can have removed the auto follow pattern while we want to update
@@ -919,11 +920,12 @@ public class AutoFollowCoordinator extends AbstractLifecycleComponent implements
             final List<String> autoFollowPatternNames
         ) {
             return currentState -> {
-                AutoFollowMetadata currentAutoFollowMetadata = currentState.metadata().custom(AutoFollowMetadata.TYPE);
+                AutoFollowMetadata currentAutoFollowMetadata = currentState.metadata().getProject().custom(AutoFollowMetadata.TYPE);
                 Map<String, List<String>> autoFollowPatternNameToFollowedIndexUUIDs = new HashMap<>(
                     currentAutoFollowMetadata.getFollowedLeaderIndexUUIDs()
                 );
-                Set<String> remoteIndexUUIDS = remoteMetadata.getIndices()
+                Set<String> remoteIndexUUIDS = remoteMetadata.getProject()
+                    .indices()
                     .values()
                     .stream()
                     .map(IndexMetadata::getIndexUUID)
