@@ -6,7 +6,6 @@
  */
 package org.elasticsearch.xpack.core.ilm;
 
-import org.elasticsearch.Version;
 import org.elasticsearch.client.internal.Client;
 import org.elasticsearch.cluster.metadata.IndexMetadata;
 import org.elasticsearch.cluster.routing.allocation.decider.ShardsLimitAllocationDecider;
@@ -21,8 +20,6 @@ import org.elasticsearch.xcontent.XContentParser;
 import org.elasticsearch.xpack.core.ilm.Step.StepKey;
 
 import java.io.IOException;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -74,17 +71,17 @@ public class AllocateAction implements LifecycleAction {
         Map<String, String> require
     ) {
         if (include == null) {
-            this.include = Collections.emptyMap();
+            this.include = Map.of();
         } else {
             this.include = include;
         }
         if (exclude == null) {
-            this.exclude = Collections.emptyMap();
+            this.exclude = Map.of();
         } else {
             this.exclude = exclude;
         }
         if (require == null) {
-            this.require = Collections.emptyMap();
+            this.require = Map.of();
         } else {
             this.require = require;
         }
@@ -123,7 +120,7 @@ public class AllocateAction implements LifecycleAction {
     public AllocateAction(StreamInput in) throws IOException {
         this(
             in.readOptionalVInt(),
-            in.getVersion().onOrAfter(Version.V_7_16_0) ? in.readOptionalInt() : null,
+            in.readOptionalInt(),
             (Map<String, String>) in.readGenericValue(),
             (Map<String, String>) in.readGenericValue(),
             (Map<String, String>) in.readGenericValue()
@@ -153,9 +150,7 @@ public class AllocateAction implements LifecycleAction {
     @Override
     public void writeTo(StreamOutput out) throws IOException {
         out.writeOptionalVInt(numberOfReplicas);
-        if (out.getVersion().onOrAfter(Version.V_7_16_0)) {
-            out.writeOptionalInt(totalShardsPerNode);
-        }
+        out.writeOptionalInt(totalShardsPerNode);
         out.writeGenericValue(include);
         out.writeGenericValue(exclude);
         out.writeGenericValue(require);
@@ -204,7 +199,7 @@ public class AllocateAction implements LifecycleAction {
         }
         UpdateSettingsStep allocateStep = new UpdateSettingsStep(allocateKey, allocationRoutedKey, client, newSettings.build());
         AllocationRoutedStep routedCheckStep = new AllocationRoutedStep(allocationRoutedKey, nextStepKey);
-        return Arrays.asList(allocateStep, routedCheckStep);
+        return List.of(allocateStep, routedCheckStep);
     }
 
     @Override
