@@ -19,9 +19,7 @@ import org.elasticsearch.cluster.metadata.IndexMetadata;
 import org.elasticsearch.common.Strings;
 
 import java.util.Arrays;
-import java.util.Locale;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 /**
  * Invokes a force merge on a single index.
@@ -56,30 +54,26 @@ public class ForceMergeStep extends AsyncActionStep {
         String indexName = indexMetadata.getIndex().getName();
         ForceMergeRequest request = new ForceMergeRequest(indexName);
         request.maxNumSegments(maxNumSegments);
-        getClient().admin().indices().forceMerge(request, ActionListener.wrap(response -> {
+        getClient().admin().indices().forceMerge(request, listener.delegateFailureAndWrap((l, response) -> {
             if (response.getFailedShards() == 0) {
-                listener.onResponse(null);
+                l.onResponse(null);
             } else {
                 DefaultShardOperationFailedException[] failures = response.getShardFailures();
                 String policyName = indexMetadata.getLifecyclePolicyName();
-                String errorMessage = String.format(
-                    Locale.ROOT,
+                String errorMessage = Strings.format(
                     "index [%s] in policy [%s] encountered failures [%s] on step [%s]",
                     indexName,
                     policyName,
                     failures == null
                         ? "n/a"
-                        : Strings.collectionToDelimitedString(
-                            Arrays.stream(failures).map(Strings::toString).collect(Collectors.toList()),
-                            ","
-                        ),
+                        : Strings.collectionToDelimitedString(Arrays.stream(failures).map(Strings::toString).toList(), ","),
                     NAME
                 );
                 logger.warn(errorMessage);
                 // let's report it as a failure and retry
-                listener.onFailure(new ElasticsearchException(errorMessage));
+                l.onFailure(new ElasticsearchException(errorMessage));
             }
-        }, listener::onFailure));
+        }));
     }
 
     @Override
