@@ -6,19 +6,18 @@
  */
 package org.elasticsearch.xpack.core.ilm;
 
-import org.elasticsearch.Version;
 import org.elasticsearch.action.ActionRequestValidationException;
 import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.metadata.IndexMetadata;
-import org.elasticsearch.cluster.metadata.IndexNameExpressionResolver;
 import org.elasticsearch.cluster.metadata.LifecycleExecutionState;
 import org.elasticsearch.cluster.metadata.Metadata;
 import org.elasticsearch.cluster.metadata.RepositoriesMetadata;
 import org.elasticsearch.cluster.metadata.RepositoryMetadata;
 import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.settings.Settings;
+import org.elasticsearch.index.IndexVersion;
 
-import java.util.Collections;
+import java.util.List;
 import java.util.Locale;
 
 import static org.elasticsearch.cluster.metadata.LifecycleExecutionState.ILM_CUSTOM_METADATA_KEY;
@@ -46,8 +45,8 @@ public class GenerateSnapshotNameStepTests extends AbstractStepTestCase<Generate
         String snapshotRepository = instance.getSnapshotRepository();
 
         switch (between(0, 2)) {
-            case 0 -> key = new Step.StepKey(key.getPhase(), key.getAction(), key.getName() + randomAlphaOfLength(5));
-            case 1 -> nextKey = new Step.StepKey(key.getPhase(), key.getAction(), key.getName() + randomAlphaOfLength(5));
+            case 0 -> key = new Step.StepKey(key.phase(), key.action(), key.name() + randomAlphaOfLength(5));
+            case 1 -> nextKey = new Step.StepKey(nextKey.phase(), nextKey.action(), nextKey.name() + randomAlphaOfLength(5));
             case 2 -> snapshotRepository = randomValueOtherThan(snapshotRepository, () -> randomAlphaOfLengthBetween(5, 10));
             default -> throw new AssertionError("Illegal randomisation branch");
         }
@@ -60,10 +59,16 @@ public class GenerateSnapshotNameStepTests extends AbstractStepTestCase<Generate
     }
 
     public void testPerformAction() {
+        testPerformAction("test-ilm-policy", "test-ilm-policy");
+        // in case the policy name contains disallowed characters ({@link org.elasticsearch.common.Strings.INVALID_CHARS}), they should
+        // be stripped off
+        testPerformAction("invalid-policy\\\\/*?\"<>|,-name", "invalid-policy-name");
+    }
+
+    private void testPerformAction(String policyName, String expectedPolicyName) {
         String indexName = randomAlphaOfLength(10);
-        String policyName = "test-ilm-policy";
         final IndexMetadata indexMetadata = IndexMetadata.builder(indexName)
-            .settings(settings(Version.CURRENT).put(LifecycleSettings.LIFECYCLE_NAME, policyName))
+            .settings(settings(IndexVersion.current()).put(LifecycleSettings.LIFECYCLE_NAME, policyName))
             .numberOfShards(randomIntBetween(1, 5))
             .numberOfReplicas(randomIntBetween(0, 5))
             .build();
@@ -77,7 +82,7 @@ public class GenerateSnapshotNameStepTests extends AbstractStepTestCase<Generate
             .metadata(
                 Metadata.builder()
                     .put(indexMetadata, false)
-                    .putCustom(RepositoriesMetadata.TYPE, new RepositoriesMetadata(Collections.singletonList(repo)))
+                    .putCustom(RepositoriesMetadata.TYPE, new RepositoriesMetadata(List.of(repo)))
                     .build()
             )
             .build();
@@ -86,7 +91,7 @@ public class GenerateSnapshotNameStepTests extends AbstractStepTestCase<Generate
 
         // the snapshot index name, snapshot repository, and snapshot name are generated as expected
         newClusterState = generateSnapshotNameStep.performAction(indexMetadata.getIndex(), clusterState);
-        LifecycleExecutionState executionState = newClusterState.metadata().index(indexName).getLifecycleExecutionState();
+        LifecycleExecutionState executionState = newClusterState.metadata().getProject().index(indexName).getLifecycleExecutionState();
         assertThat(executionState.snapshotIndexName(), is(indexName));
         assertThat(
             "the " + GenerateSnapshotNameStep.NAME + " step must generate a snapshot name",
@@ -95,11 +100,11 @@ public class GenerateSnapshotNameStepTests extends AbstractStepTestCase<Generate
         );
         assertThat(executionState.snapshotRepository(), is(generateSnapshotNameStep.getSnapshotRepository()));
         assertThat(executionState.snapshotName(), containsString(indexName.toLowerCase(Locale.ROOT)));
-        assertThat(executionState.snapshotName(), containsString(policyName.toLowerCase(Locale.ROOT)));
+        assertThat(executionState.snapshotName(), containsString(expectedPolicyName));
 
         // re-running this step results in no change to the important outputs
         newClusterState = generateSnapshotNameStep.performAction(indexMetadata.getIndex(), newClusterState);
-        LifecycleExecutionState repeatedState = newClusterState.metadata().index(indexName).getLifecycleExecutionState();
+        LifecycleExecutionState repeatedState = newClusterState.metadata().getProject().index(indexName).getLifecycleExecutionState();
         assertThat(repeatedState.snapshotIndexName(), is(executionState.snapshotIndexName()));
         assertThat(repeatedState.snapshotRepository(), is(executionState.snapshotRepository()));
         assertThat(repeatedState.snapshotName(), is(executionState.snapshotName()));
@@ -109,7 +114,7 @@ public class GenerateSnapshotNameStepTests extends AbstractStepTestCase<Generate
         String indexName = randomAlphaOfLength(10);
         String policyName = "test-ilm-policy";
         final IndexMetadata indexMetadata = IndexMetadata.builder(indexName)
-            .settings(settings(Version.CURRENT).put(LifecycleSettings.LIFECYCLE_NAME, policyName))
+            .settings(settings(IndexVersion.current()).put(LifecycleSettings.LIFECYCLE_NAME, policyName))
             .numberOfShards(randomIntBetween(1, 5))
             .numberOfReplicas(randomIntBetween(0, 5))
             .build();
@@ -147,7 +152,7 @@ public class GenerateSnapshotNameStepTests extends AbstractStepTestCase<Generate
         newCustomData.setSnapshotRepository("snapshot-repository-will-be-reset");
 
         final IndexMetadata indexMetadata = IndexMetadata.builder(indexName)
-            .settings(settings(Version.CURRENT).put(LifecycleSettings.LIFECYCLE_NAME, policyName))
+            .settings(settings(IndexVersion.current()).put(LifecycleSettings.LIFECYCLE_NAME, policyName))
             .numberOfShards(randomIntBetween(1, 5))
             .numberOfReplicas(randomIntBetween(0, 5))
             .putCustom(ILM_CUSTOM_METADATA_KEY, newCustomData.build().asMap())
@@ -162,14 +167,14 @@ public class GenerateSnapshotNameStepTests extends AbstractStepTestCase<Generate
             .metadata(
                 Metadata.builder()
                     .put(indexMetadata, false)
-                    .putCustom(RepositoriesMetadata.TYPE, new RepositoriesMetadata(Collections.singletonList(repo)))
+                    .putCustom(RepositoriesMetadata.TYPE, new RepositoriesMetadata(List.of(repo)))
                     .build()
             )
             .build();
 
         ClusterState newClusterState = generateSnapshotNameStep.performAction(indexMetadata.getIndex(), clusterState);
 
-        LifecycleExecutionState executionState = newClusterState.metadata().index(indexName).getLifecycleExecutionState();
+        LifecycleExecutionState executionState = newClusterState.metadata().getProject().index(indexName).getLifecycleExecutionState();
         assertThat(executionState.snapshotName(), is("snapshot-name-is-not-touched"));
         assertThat(executionState.snapshotRepository(), is(generateSnapshotNameStep.getSnapshotRepository()));
     }
@@ -179,13 +184,12 @@ public class GenerateSnapshotNameStepTests extends AbstractStepTestCase<Generate
         assertThat(generateSnapshotName("name"), startsWith("name-"));
         assertThat(generateSnapshotName("name").length(), greaterThan("name-".length()));
 
-        IndexNameExpressionResolver.ResolverContext resolverContext = new IndexNameExpressionResolver.ResolverContext(time);
-        assertThat(generateSnapshotName("<name-{now}>", resolverContext), startsWith("name-2019.03.15-"));
-        assertThat(generateSnapshotName("<name-{now}>", resolverContext).length(), greaterThan("name-2019.03.15-".length()));
+        assertThat(generateSnapshotName("<name-{now}>", time), startsWith("name-2019.03.15-"));
+        assertThat(generateSnapshotName("<name-{now}>", time).length(), greaterThan("name-2019.03.15-".length()));
 
-        assertThat(generateSnapshotName("<name-{now/M}>", resolverContext), startsWith("name-2019.03.01-"));
+        assertThat(generateSnapshotName("<name-{now/M}>", time), startsWith("name-2019.03.01-"));
 
-        assertThat(generateSnapshotName("<name-{now/m{yyyy-MM-dd.HH:mm:ss}}>", resolverContext), startsWith("name-2019-03-15.21:09:00-"));
+        assertThat(generateSnapshotName("<name-{now/m{yyyy-MM-dd.HH:mm:ss}}>", time), startsWith("name-2019-03-15.21:09:00-"));
     }
 
     public void testNameValidation() {
