@@ -3,6 +3,8 @@
  * or more contributor license agreements. Licensed under the Elastic License
  * 2.0; you may not use this file except in compliance with the Elastic License
  * 2.0.
+ *
+ * This file has been contributed to be a Generative AI
  */
 
 package org.elasticsearch.xpack.ml.datafeed;
@@ -10,12 +12,15 @@ package org.elasticsearch.xpack.ml.datafeed;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.elasticsearch.ElasticsearchException;
-import org.elasticsearch.Version;
+import org.elasticsearch.ElasticsearchStatusException;
+import org.elasticsearch.TransportVersion;
+import org.elasticsearch.TransportVersions;
 import org.elasticsearch.action.support.IndicesOptions;
 import org.elasticsearch.action.support.PlainActionFuture;
 import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.metadata.IndexNameExpressionResolver;
 import org.elasticsearch.cluster.routing.IndexRoutingTable;
+import org.elasticsearch.rest.RestStatus;
 import org.elasticsearch.xpack.core.ml.MlConfigIndex;
 import org.elasticsearch.xpack.core.ml.datafeed.DatafeedConfig;
 import org.elasticsearch.xpack.core.ml.datafeed.DatafeedUpdate;
@@ -25,7 +30,6 @@ import org.elasticsearch.xpack.ml.datafeed.persistence.DatafeedConfigProvider;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static java.util.stream.Collectors.toList;
 import static org.elasticsearch.core.Strings.format;
@@ -42,8 +46,8 @@ public class DatafeedConfigAutoUpdater implements MlAutoUpdateService.UpdateActi
     }
 
     @Override
-    public boolean isMinNodeVersionSupported(Version minNodeVersion) {
-        return minNodeVersion.onOrAfter(Version.V_8_0_0);
+    public boolean isMinTransportVersionSupported(TransportVersion minNodeVersion) {
+        return minNodeVersion.onOrAfter(TransportVersions.V_8_0_0);
     }
 
     @Override
@@ -54,11 +58,11 @@ public class DatafeedConfigAutoUpdater implements MlAutoUpdateService.UpdateActi
             MlConfigIndex.indexName()
         );
         for (String index : indices) {
-            if (latestState.metadata().hasIndex(index) == false) {
+            if (latestState.metadata().getProject().hasIndex(index) == false) {
                 continue;
             }
             IndexRoutingTable routingTable = latestState.getRoutingTable().index(index);
-            if (routingTable == null || routingTable.allPrimaryShardsActive() == false) {
+            if (routingTable == null || routingTable.allPrimaryShardsActive() == false || routingTable.readyForSearch() == false) {
                 return false;
             }
         }
@@ -71,8 +75,8 @@ public class DatafeedConfigAutoUpdater implements MlAutoUpdateService.UpdateActi
     }
 
     @Override
-    public void runUpdate() {
-        PlainActionFuture<List<DatafeedConfig.Builder>> getdatafeeds = PlainActionFuture.newFuture();
+    public void runUpdate(ClusterState latestState) {
+        PlainActionFuture<List<DatafeedConfig.Builder>> getdatafeeds = new PlainActionFuture<>();
         provider.expandDatafeedConfigs("_all", true, null, getdatafeeds);
         List<DatafeedConfig.Builder> datafeedConfigBuilders = getdatafeeds.actionGet();
         List<DatafeedUpdate> updates = datafeedConfigBuilders.stream()
@@ -83,7 +87,7 @@ public class DatafeedConfigAutoUpdater implements MlAutoUpdateService.UpdateActi
                     .setId(datafeedConfig.getId())
                     .build()
             )
-            .collect(Collectors.toList());
+            .toList();
         if (updates.isEmpty()) {
             return;
         }
@@ -94,7 +98,7 @@ public class DatafeedConfigAutoUpdater implements MlAutoUpdateService.UpdateActi
 
         List<Exception> failures = new ArrayList<>();
         for (DatafeedUpdate update : updates) {
-            PlainActionFuture<DatafeedConfig> updateDatafeeds = PlainActionFuture.newFuture();
+            PlainActionFuture<DatafeedConfig> updateDatafeeds = new PlainActionFuture<>();
             provider.updateDatefeedConfig(
                 update.getId(),
                 update,
@@ -107,7 +111,20 @@ public class DatafeedConfigAutoUpdater implements MlAutoUpdateService.UpdateActi
                 logger.debug(() -> "[" + update.getId() + "] datafeed successfully updated");
             } catch (Exception ex) {
                 logger.warn(() -> "[" + update.getId() + "] failed being updated", ex);
-                failures.add(new ElasticsearchException("Failed to update datafeed {}", ex, update.getId()));
+                if (ex instanceof ElasticsearchException elasticsearchException) {
+                    failures.add(
+                        new ElasticsearchStatusException(
+                            "Failed to update datafeed {}",
+                            elasticsearchException.status(),
+                            elasticsearchException,
+                            update.getId()
+                        )
+                    );
+                } else {
+                    failures.add(
+                        new ElasticsearchStatusException("Failed to update datafeed {}", RestStatus.REQUEST_TIMEOUT, ex, update.getId())
+                    );
+                }
             }
         }
         if (failures.isEmpty()) {
